namespace SportTracker.Core.Enums;

public enum CardioType
{
    Run, 
    Walk,
    Swim ,
    Bike
}