namespace SportTracker.Core.Enums;

public enum ExerciseType
{
    Strength,
    Cardio
}