namespace SportTracker.Core.Enums;

public enum MuscleGroup
{
    Chest,
    Back,
    Shoulders,
    Biceps,
    Triceps,
    Legs,
    Glutes,
    Abs,
    FullBody
}