// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using SportTracker.Data;

#nullable disable

namespace SportTracker.Data.Migrations
{
    [DbContext(typeof(SportTrackerDbContext))]
    [Migration("20260723205906_AddWorkoutPrograms")]
    partial class AddWorkoutPrograms
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "10.0.5");

            modelBuilder.Entity("SportTracker.Core.Models.CardioSession", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("Date")
                        .HasColumnType("TEXT");

                    b.Property<double>("Distance")
                        .HasColumnType("REAL");

                    b.Property<TimeSpan>("Duration")
                        .HasColumnType("TEXT");

                    b.Property<double>("ElevationGain")
                        .HasColumnType("REAL");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("Type")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.ToTable("CardioSessions");
                });

            modelBuilder.Entity("SportTracker.Core.Models.Exercise", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("GifUrl")
                        .HasColumnType("TEXT");

                    b.Property<string>("InstructionsFr")
                        .HasColumnType("TEXT");

                    b.Property<string>("MuscleGroups")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("Type")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.ToTable("Exercises");
                });

            modelBuilder.Entity("SportTracker.Core.Models.ExerciseSet", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("Repetitions")
                        .HasColumnType("INTEGER");

                    b.Property<double>("Weight")
                        .HasColumnType("REAL");

                    b.Property<int>("WorkoutExerciseId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("WorkoutExerciseId");

                    b.ToTable("ExerciseSets");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutExercise", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("ExerciseId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("WorkoutSessionId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("ExerciseId");

                    b.HasIndex("WorkoutSessionId");

                    b.ToTable("WorkoutExercises");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgram", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("ColorHex")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Objective")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("WorkoutPrograms");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgramExercise", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("ExerciseId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("Order")
                        .HasColumnType("INTEGER");

                    b.Property<int>("RestSeconds")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TargetRepsMax")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TargetRepsMin")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TargetSets")
                        .HasColumnType("INTEGER");

                    b.Property<int>("WorkoutProgramSessionId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("ExerciseId");

                    b.HasIndex("WorkoutProgramSessionId");

                    b.ToTable("WorkoutProgramExercises");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgramSession", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("Order")
                        .HasColumnType("INTEGER");

                    b.Property<int>("WorkoutProgramId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("WorkoutProgramId");

                    b.ToTable("WorkoutProgramSessions");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutSession", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("Date")
                        .HasColumnType("TEXT");

                    b.Property<TimeSpan>("Duration")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int?>("WorkoutProgramSessionId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("WorkoutProgramSessionId");

                    b.ToTable("WorkoutSessions");
                });

            modelBuilder.Entity("SportTracker.Core.Models.ExerciseSet", b =>
                {
                    b.HasOne("SportTracker.Core.Models.WorkoutExercise", "WorkoutExercise")
                        .WithMany("ExerciseSets")
                        .HasForeignKey("WorkoutExerciseId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("WorkoutExercise");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutExercise", b =>
                {
                    b.HasOne("SportTracker.Core.Models.Exercise", "Exercise")
                        .WithMany()
                        .HasForeignKey("ExerciseId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("SportTracker.Core.Models.WorkoutSession", "WorkoutSession")
                        .WithMany("WorkoutExercises")
                        .HasForeignKey("WorkoutSessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Exercise");

                    b.Navigation("WorkoutSession");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgramExercise", b =>
                {
                    b.HasOne("SportTracker.Core.Models.Exercise", "Exercise")
                        .WithMany()
                        .HasForeignKey("ExerciseId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("SportTracker.Core.Models.WorkoutProgramSession", "WorkoutProgramSession")
                        .WithMany("Exercises")
                        .HasForeignKey("WorkoutProgramSessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Exercise");

                    b.Navigation("WorkoutProgramSession");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgramSession", b =>
                {
                    b.HasOne("SportTracker.Core.Models.WorkoutProgram", "WorkoutProgram")
                        .WithMany("Sessions")
                        .HasForeignKey("WorkoutProgramId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("WorkoutProgram");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutSession", b =>
                {
                    b.HasOne("SportTracker.Core.Models.WorkoutProgramSession", "WorkoutProgramSession")
                        .WithMany()
                        .HasForeignKey("WorkoutProgramSessionId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("WorkoutProgramSession");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutExercise", b =>
                {
                    b.Navigation("ExerciseSets");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgram", b =>
                {
                    b.Navigation("Sessions");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutProgramSession", b =>
                {
                    b.Navigation("Exercises");
                });

            modelBuilder.Entity("SportTracker.Core.Models.WorkoutSession", b =>
                {
                    b.Navigation("WorkoutExercises");
                });
#pragma warning restore 612, 618
        }
    }
}
