@startuml
title Modèle de domaine — SportTracker

skinparam class {
    BackgroundColor #FDFEFE
    BorderColor #2C3E50
    ArrowColor #2C3E50
    FontSize 12
}

skinparam interface {
    BackgroundColor #D6EAF8
    BorderColor #2980B9
}

skinparam enum {
    BackgroundColor #FEF9E7
    BorderColor #F39C12
}

package "Sessions" #EBF5FB {
    interface ISession {
        + Id : int
        + Name : string
        + Date : DateTime
        + Duration : TimeSpan
    }

    class WorkoutSession #D5F5E3 {
        + WorkoutExercises : List<WorkoutExercise>
        + WorkoutProgramSessionId : int?
    }

    class CardioSession #D5F5E3 {
        + Distance : double
        + ElevationGain : double
        + Type : CardioType
    }
}

package "Programmes" #E8F8F5 {
    class WorkoutProgram #A3E4D7 {
        + Id : int
        + Name : string
        + Objective : string?
        + ColorHex : string
        + Sessions : List<WorkoutProgramSession>
    }

    class WorkoutProgramSession #A3E4D7 {
        + Id : int
        + Name : string
        + Order : int
        + WorkoutProgramId : int
        + Exercises : List<WorkoutProgramExercise>
    }

    class WorkoutProgramExercise #A3E4D7 {
        + Id : int
        + Order : int
        + ExerciseId : int
        + TargetSets : int
        + TargetRepsMin : int
        + TargetRepsMax : int
        + RestSeconds : int
    }
}

package "Exercices" #FEF9E7 {
    class Exercise #FDEBD0 {
        + Id : int
        + Name : string
        + Type : ExerciseType
        + MuscleGroups : List<MuscleGroup>
        + GifUrl : string?
        + InstructionsFr : string?
    }

    class WorkoutExercise #FDEBD0 {
        + Id : int
        + ExerciseId : int
        + WorkoutSessionId : int
        + ExerciseSets : List<ExerciseSet>
    }

    class ExerciseSet #FDEBD0 {
        + Id : int
        + Repetitions : int
        + Weight : double
        + WorkoutExerciseId : int
    }
}

package "Enums" #F9F9F9 {
    enum ExerciseType {
        Strength
        Cardio
    }

    enum CardioType {
        Run
        Walk
        Swim
        Bike
    }

    enum MuscleGroup {
        Chest
        Back
        Shoulders
        Biceps
        Triceps
        Legs
        Glutes
        Abs
        FullBody
    }
}

' Implémentations
WorkoutSession ..|> ISession
CardioSession ..|> ISession

' Composition — Sessions
WorkoutSession *-- WorkoutExercise
WorkoutExercise *-- ExerciseSet

' Composition — Programmes
WorkoutProgram *-- WorkoutProgramSession
WorkoutProgramSession *-- WorkoutProgramExercise

' Associations
WorkoutExercise o-- Exercise : contient
WorkoutProgramExercise o-- Exercise : cible
Exercise o-- ExerciseType : type
Exercise o-- MuscleGroup : groupes musculaires
CardioSession o-- CardioType : type

' Lien Programme → Historique
WorkoutSession "0..*" ..> "0..1" WorkoutProgramSession : provient de\n(FK nullable, SetNull)

@enduml
